Adjusted display settings to prevent image overflow in textimage blocks and added media queries.

--- a/wagtailio/static/css/components/text-image.scss
+++ b/wagtailio/static/css/components/text-image.scss
@@ -14,15 +14,27 @@
   .container {
     max-width: 800px;
     margin: 0 auto;
+    overflow: hidden;
 
     .text {
       max-width: 50%;
+
+      @include media-query(mobileOnly) {
+        max-width: 100%;
+        padding-top: 50px;
+      }
     }
 
     .image {
       float: right;
       max-width: 50%;
       padding-left: $gutter;
+
+      @include media-query(mobileOnly){
+        max-width: 100%;
+        padding-left: 0px;
+        float: none;
+      }
 
       img {
         display: block;
